--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-[program:go-app]
+[program:web-app]
 command=%(ENV_SUPERVISOR_GO_COMMAND)s
 user=%(ENV_SUPERVISOR_GO_USER)s
 environment=GO_APP="1"
